Simplify API, improve Javadoc