@@ -1,10 +1,10 @@
-package com.coditory.sherlock.rxjava;
+package com.coditory.sherlock.reactor.test;
 
-import com.coditory.sherlock.LockId;
 import com.coditory.sherlock.connector.AcquireResult;
 import com.coditory.sherlock.connector.ReleaseResult;
-import io.reactivex.Single;
+import com.coditory.sherlock.reactor.DistributedLock;
 import org.jetbrains.annotations.NotNull;
+import reactor.core.publisher.Mono;
 
 import java.time.Duration;
 import java.util.List;
@@ -17,6 +17,8 @@ import static com.coditory.sherlock.Preconditions.expectNonNull;
 import static com.coditory.sherlock.UuidGenerator.uuid;
 
 public final class DistributedLockMock implements DistributedLock {
+    private static final String DEFAULT_OWNER = "lock-mock-owner";
+
     @NotNull
     public static DistributedLockMock releasedInMemoryLock() {
         return releasedInMemoryLock(uuid());
@@ -39,8 +41,9 @@ public final class DistributedLockMock implements DistributedLock {
         return inMemoryLock(lockId, true);
     }
 
-    private static DistributedLockMock inMemoryLock(String lockId, boolean state) {
-        return of(InMemoryDistributedLockStub.inMemoryLock(LockId.of(lockId), state));
+    private static DistributedLockMock inMemoryLock(@NotNull String lockId, boolean state) {
+        expectNonEmpty(lockId, "lockId");
+        return of(InMemoryDistributedLockStub.inMemoryLock(lockId, state));
     }
 
     @NotNull
@@ -65,13 +68,14 @@ public final class DistributedLockMock implements DistributedLock {
         return reentrantInMemoryLock(lockId, true);
     }
 
-    private static DistributedLockMock reentrantInMemoryLock(String lockId, boolean state) {
-        return of(InMemoryDistributedLockStub.reentrantInMemoryLock(LockId.of(lockId), state));
+    private static DistributedLockMock reentrantInMemoryLock(@NotNull String lockId, boolean state) {
+        expectNonEmpty(lockId, "lockId");
+        return of(InMemoryDistributedLockStub.reentrantInMemoryLock(lockId, state));
     }
 
     @NotNull
     public static DistributedLockMock lockStub(boolean result) {
-        return lockStub(uuid(), result, result);
+        return lockStub(uuid(), result);
     }
 
     @NotNull
@@ -80,38 +84,38 @@ public final class DistributedLockMock implements DistributedLock {
     }
 
     @NotNull
-    public static DistributedLockMock lockStub(String lockId, boolean result) {
+    public static DistributedLockMock lockStub(@NotNull String lockId, boolean result) {
         expectNonEmpty(lockId, "lockId");
         return of(lockStub(lockId, result, result));
     }
 
     @NotNull
     public static DistributedLockMock lockStub(
-            @NotNull String lockId,
-            boolean acquireResult,
-            boolean releaseResult
+        String lockId,
+        boolean acquireResult,
+        boolean releaseResult
     ) {
         expectNonEmpty(lockId, "lockId");
         SequencedDistributedLockStub lock = new SequencedDistributedLockStub(
-                lockId, List.of(acquireResult), List.of(releaseResult));
+            lockId, List.of(acquireResult), List.of(releaseResult));
         return of(lock);
     }
 
     @NotNull
     public static DistributedLockMock sequencedLock(
-            @NotNull List<Boolean> acquireResults,
-            @NotNull List<Boolean> releaseResults
+        @NotNull List<Boolean> acquireResults,
+        @NotNull List<Boolean> releaseResults
     ) {
         expectNonNull(acquireResults, "acquireResults");
         expectNonNull(releaseResults, "releaseResults");
-        return sequencedLock(uuid(), acquireResults, releaseResults);
+        return of(sequencedLock(uuid(), acquireResults, releaseResults));
     }
 
     @NotNull
     public static DistributedLockMock sequencedLock(
-            @NotNull String lockId,
-            @NotNull List<Boolean> acquireResults,
-            @NotNull List<Boolean> releaseResults
+        @NotNull String lockId,
+        @NotNull List<Boolean> acquireResults,
+        @NotNull List<Boolean> releaseResults
     ) {
         expectNonEmpty(lockId, "lockId");
         expectNonNull(acquireResults, "acquireResults");
@@ -119,7 +123,8 @@ public final class DistributedLockMock implements DistributedLock {
         return of(new SequencedDistributedLockStub(lockId, acquireResults, releaseResults));
     }
 
-    private static DistributedLockMock of(DistributedLock lock) {
+    private static DistributedLockMock of(@NotNull DistributedLock lock) {
+        expectNonNull(lock, "lock");
         return new DistributedLockMock(lock);
     }
 
@@ -141,25 +146,26 @@ public final class DistributedLockMock implements DistributedLock {
 
     @Override
     @NotNull
-    public Single<AcquireResult> acquire() {
+    public Mono<AcquireResult> acquire() {
         return lock.acquire()
-                .map(this::incrementAcquireCounters);
+            .map(this::incrementAcquireCounters);
     }
 
     @Override
     @NotNull
-    public Single<AcquireResult> acquire(@NotNull Duration duration) {
+    public Mono<AcquireResult> acquire(@NotNull Duration duration) {
         expectNonNull(duration, "duration");
         return acquire();
     }
 
     @Override
     @NotNull
-    public Single<AcquireResult> acquireForever() {
+    public Mono<AcquireResult> acquireForever() {
         return acquire();
     }
 
     private AcquireResult incrementAcquireCounters(AcquireResult result) {
+        expectNonNull(result, "result");
         acquisitions.incrementAndGet();
         if (result.isAcquired()) {
             successfulAcquisitions.incrementAndGet();
@@ -169,12 +175,13 @@ public final class DistributedLockMock implements DistributedLock {
 
     @Override
     @NotNull
-    public Single<ReleaseResult> release() {
+    public Mono<ReleaseResult> release() {
         return lock.release()
-                .map(this::incrementReleaseCounters);
+            .map(this::incrementReleaseCounters);
     }
 
     private ReleaseResult incrementReleaseCounters(ReleaseResult result) {
+        expectNonNull(result, "result");
         releases.incrementAndGet();
         if (result.isReleased()) {
             successfulReleases.incrementAndGet();
@@ -274,19 +281,19 @@ public final class DistributedLockMock implements DistributedLock {
     }
 
     private static class InMemoryDistributedLockStub implements DistributedLock {
-        private final LockId lockId;
+        private final String lockId;
         private final boolean reentrant;
         private final AtomicBoolean acquired;
 
-        static InMemoryDistributedLockStub reentrantInMemoryLock(LockId lockId, boolean acquired) {
+        static InMemoryDistributedLockStub reentrantInMemoryLock(String lockId, boolean acquired) {
             return new InMemoryDistributedLockStub(lockId, true, acquired);
         }
 
-        static InMemoryDistributedLockStub inMemoryLock(LockId lockId, boolean acquired) {
+        static InMemoryDistributedLockStub inMemoryLock(String lockId, boolean acquired) {
             return new InMemoryDistributedLockStub(lockId, false, acquired);
         }
 
-        private InMemoryDistributedLockStub(LockId lockId, boolean reentrant, boolean acquired) {
+        private InMemoryDistributedLockStub(String lockId, boolean reentrant, boolean acquired) {
             this.lockId = expectNonNull(lockId, "lockId");
             this.reentrant = reentrant;
             this.acquired = new AtomicBoolean(acquired);
@@ -295,14 +302,14 @@ public final class DistributedLockMock implements DistributedLock {
         @Override
         @NotNull
         public String getId() {
-            return lockId.getValue();
+            return lockId;
         }
 
         @Override
         @NotNull
-        public Single<AcquireResult> acquire() {
-            return Single.fromCallable(this::acquireSync)
-                    .map(AcquireResult::of);
+        public Mono<AcquireResult> acquire() {
+            return Mono.fromCallable(this::acquireSync)
+                .map(AcquireResult::of);
         }
 
         private boolean acquireSync() {
@@ -316,22 +323,22 @@ public final class DistributedLockMock implements DistributedLock {
 
         @Override
         @NotNull
-        public Single<AcquireResult> acquire(@NotNull Duration duration) {
+        public Mono<AcquireResult> acquire(@NotNull Duration duration) {
             expectNonNull(duration, "duration");
             return acquire();
         }
 
         @Override
         @NotNull
-        public Single<AcquireResult> acquireForever() {
+        public Mono<AcquireResult> acquireForever() {
             return acquire();
         }
 
         @Override
         @NotNull
-        public Single<ReleaseResult> release() {
-            return Single.fromCallable(this::releaseSync)
-                    .map(ReleaseResult::of);
+        public Mono<ReleaseResult> release() {
+            return Mono.fromCallable(this::releaseSync)
+                .map(ReleaseResult::of);
         }
 
         private boolean releaseSync() {
@@ -340,68 +347,63 @@ public final class DistributedLockMock implements DistributedLock {
     }
 
     static class SequencedDistributedLockStub implements DistributedLock {
-        private final LockId lockId;
+        private final String lockId;
         private final ConcurrentLinkedQueue<Boolean> acquireResults;
         private final ConcurrentLinkedQueue<Boolean> releaseResults;
         private final boolean defaultAcquireResult;
         private final boolean defaultReleaseResult;
 
         private SequencedDistributedLockStub(
-                String lockId, List<Boolean> acquireResults, List<Boolean> releaseResults) {
-            this(LockId.of(lockId), acquireResults, releaseResults);
-        }
-
-        private SequencedDistributedLockStub(
-                LockId lockId,
-                List<Boolean> acquireResults,
-                List<Boolean> releaseResults
+            String lockId,
+            List<Boolean> acquireResults,
+            List<Boolean> releaseResults
         ) {
             expectNonNull(lockId, "lockId");
-            expectNonEmpty(acquireResults, "acquire results");
-            expectNonEmpty(releaseResults, "release results");
+            expectNonEmpty(acquireResults, "acquireResults");
+            expectNonEmpty(releaseResults, "releaseResults");
             this.lockId = expectNonNull(lockId, "lockId");
             this.acquireResults = new ConcurrentLinkedQueue<>(acquireResults);
             this.releaseResults = new ConcurrentLinkedQueue<>(releaseResults);
-            this.defaultAcquireResult = acquireResults.get(acquireResults.size() - 1);
-            this.defaultReleaseResult = releaseResults.get(releaseResults.size() - 1);
+            this.defaultAcquireResult = acquireResults.getLast();
+            this.defaultReleaseResult = releaseResults.getLast();
         }
 
         @Override
         @NotNull
         public String getId() {
-            return lockId.getValue();
+            return lockId;
         }
 
         @Override
         @NotNull
-        public Single<AcquireResult> acquire() {
+        public Mono<AcquireResult> acquire() {
             return pollOrDefault(acquireResults, defaultAcquireResult)
-                    .map(AcquireResult::of);
+                .map(AcquireResult::of);
         }
 
         @Override
         @NotNull
-        public Single<AcquireResult> acquire(@NotNull Duration duration) {
+        public Mono<AcquireResult> acquire(@NotNull Duration duration) {
             expectNonNull(duration, "duration");
             return acquire();
         }
 
         @Override
         @NotNull
-        public Single<AcquireResult> acquireForever() {
+        public Mono<AcquireResult> acquireForever() {
             return acquire();
         }
 
         @Override
         @NotNull
-        public Single<ReleaseResult> release() {
+        public Mono<ReleaseResult> release() {
             return pollOrDefault(releaseResults, defaultReleaseResult)
-                    .map(ReleaseResult::of);
+                .map(ReleaseResult::of);
         }
 
-        private Single<Boolean> pollOrDefault(
-                ConcurrentLinkedQueue<Boolean> queue, boolean defaultValue) {
-            return Single.fromCallable(() -> {
+        private Mono<Boolean> pollOrDefault(
+            ConcurrentLinkedQueue<Boolean> queue, boolean defaultValue) {
+            return Mono.fromCallable(() -> {
                 Boolean value = queue.poll();
                 return value != null ? value : defaultValue;
             });
