@@ -1,8 +1,6 @@
 package com.coditory.sherlock.inmem;
 
-import com.coditory.sherlock.LockId;
 import com.coditory.sherlock.LockRequest;
-import com.coditory.sherlock.OwnerId;
 import org.jetbrains.annotations.NotNull;
 
 import java.time.Instant;
@@ -11,7 +9,6 @@ import java.util.List;
 import java.util.Map;
 
 import static com.coditory.sherlock.Preconditions.expectNonNull;
-import static java.util.stream.Collectors.toList;
 
 public class InMemoryDistributedLockStorage {
     private static final InMemoryDistributedLockStorage INSTANCE = new InMemoryDistributedLockStorage();
@@ -21,13 +18,13 @@ public class InMemoryDistributedLockStorage {
         return INSTANCE;
     }
 
-    private final Map<LockId, InMemoryDistributedLock> locks = new HashMap<>();
+    private final Map<String, InMemoryDistributedLock> locks = new HashMap<>();
 
     synchronized public boolean acquire(@NotNull LockRequest lockRequest, @NotNull Instant now) {
         expectNonNull(lockRequest, "lockRequest");
         expectNonNull(now, "now");
         dropExpiredLocks(now);
-        LockId id = lockRequest.getLockId();
+        String id = lockRequest.lockId();
         InMemoryDistributedLock lock = locks.get(id);
         if (lock == null) {
             locks.put(id, InMemoryDistributedLock.fromLockRequest(lockRequest, now));
@@ -40,9 +37,9 @@ public class InMemoryDistributedLockStorage {
         expectNonNull(lockRequest, "lockRequest");
         expectNonNull(now, "now");
         dropExpiredLocks(now);
-        LockId id = lockRequest.getLockId();
+        String id = lockRequest.lockId();
         InMemoryDistributedLock lock = locks.get(id);
-        if (lock == null || lock.isOwnedBy(lockRequest.getOwnerId())) {
+        if (lock == null || lock.isOwnedBy(lockRequest.ownerId())) {
             locks.put(id, InMemoryDistributedLock.fromLockRequest(lockRequest, now));
             return true;
         }
@@ -53,12 +50,12 @@ public class InMemoryDistributedLockStorage {
         expectNonNull(lockRequest, "lockRequest");
         expectNonNull(now, "now");
         dropExpiredLocks(now);
-        LockId id = lockRequest.getLockId();
+        String id = lockRequest.lockId();
         locks.put(id, InMemoryDistributedLock.fromLockRequest(lockRequest, now));
         return true;
     }
 
-    synchronized public boolean release(@NotNull LockId lockId, @NotNull Instant now, @NotNull OwnerId ownerId) {
+    synchronized public boolean release(@NotNull String lockId, @NotNull Instant now, @NotNull String ownerId) {
         expectNonNull(lockId, "lockId");
         expectNonNull(now, "now");
         expectNonNull(ownerId, "ownerId");
@@ -71,7 +68,7 @@ public class InMemoryDistributedLockStorage {
         return false;
     }
 
-    synchronized public boolean forceRelease(@NotNull LockId lockId, @NotNull Instant now) {
+    synchronized public boolean forceRelease(@NotNull String lockId, @NotNull Instant now) {
         expectNonNull(lockId, "lockId");
         expectNonNull(now, "now");
         dropExpiredLocks(now);
@@ -95,10 +92,10 @@ public class InMemoryDistributedLockStorage {
     }
 
     private void dropExpiredLocks(Instant now) {
-        List<LockId> expired = locks.values().stream()
-                .filter(lock -> lock.isExpired(now))
-                .map(InMemoryDistributedLock::getId)
-                .collect(toList());
+        List<String> expired = locks.values().stream()
+            .filter(lock -> lock.isExpired(now))
+            .map(InMemoryDistributedLock::getId)
+            .toList();
         expired.forEach(locks::remove);
     }
 }
